[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-billing"
version = "0.1.0"
description = "ProjectMaker shared billing and subscriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "stripe>=5.0.0",
    "django-money>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pm_billing*"]
